# AdventOfCode

./: .gitignore  Cargo.toml  README.md  go.mod  pyproject.toml
2023/: Cargo.toml
2023/1/: readme.md  solution.py  solution.rs
2023/2/: readme.md  solution.py
2023/3/: solution.py
2023/4/: readme.md  solution.py
2023/day_one/: solution.go
2025/: Cargo.toml
2025/1/: solution.rs
